# tomwidgets

./: .gitignore  README.md  Widgets.MD  install_pkg.bat  main.py  pyproject.toml  settings.ini  test.py  tools.ini
.github/workflows/: workflow.yml
tomwidgets/: __init__.py
tomwidgets/Template/: Template.py  TemplateGroup.py  Template_back.py  __init__.py
tomwidgets/examples/: __init__.py  basetool_example.py  btnbar_example.py  cmdeditor_example.py  cmdhistory_example.py  cmdmgr_example.py  cmdwin_example.py  codetool_example.py  codewin_example.py  combobar_example.py  configeditor_example.py  configwin_example.py  crawler_example.py  dictview_example.py  editbar_example.py  emoji_example.py  eventbus_example.py  folderbar_example.py  frame_example.py  icontool_example.py  infobox_example.py  inputbar_example.py  inputbox_example.py  inputdialog_example.py  inputlistbar_example.py  jsoneditor_example.py  jsonfile_example.py  menubtn_example.py  optionbar_example.py  optionmenu_example.py  popmenu_example.py  pyinstall_example.py  retool_example.py  segoe_example.py  singletonbase_example.py  stapling_example.py  tabview_example.py  template_example.py  templategroup_example.py  templatewin_example.py  (+11 more)
tomwidgets/model/: Cmd.py  CmdHistory.py  Emoji.py  Segoe.py  __init__.py
tomwidgets/tools/: CodeTool.py  Crawler.py  IconTool.py  PyInstall.py  RETool.py  TextTwo.py  UrlTool.py  Urls.py  __init__.py
tomwidgets/util/: ClassUtil.py  EventBus.py  JsonFile.py  ModuleUtil.py  __init__.py
tomwidgets/widget/: BaseWin.py  BtnBar.py  CmdEditor.py  CmdMgr.py  CmdWin.py  (+28 more)
(+28 files in other folders)
